--- a/examples/introduction.ipynb
+++ b/examples/introduction.ipynb
@@ -9,13 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c45e2f772634f06a59329a2cac94d60",
+       "model_id": "cfab9379c2ba4a5b892a9f7f253e51ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -35,19 +35,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "t.write('FUCK YOU')\n",
-    "t.write('FUCK YOU', False, \"right\")\n",
-    "t.back(50)\n",
-    "t.write('FUCK YOU', False, \"center\")"
+    "t.dot()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
