--- a/examples/introduction.ipynb
+++ b/examples/introduction.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cfab9379c2ba4a5b892a9f7f253e51ef",
+       "model_id": "830ef1045cf54924b0f349fbd5530712",
        "version_major": 2,
        "version_minor": 0
       },
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t.dot()"
+    "t.circle(20)"
    ]
   },
   {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,11 +73,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "t.left(90)"
+    "t.forward(50)\n",
+    "t.circle(20, 180)"
    ]
   },
   {
