--- a/examples/introduction.ipynb
+++ b/examples/introduction.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1f7800d26304cadb4c02f006502521c",
+       "model_id": "f2a876eb401a40af93f26a8ce90abcfd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t.write('FUCK YOU', False, \"right\")"
+    "t.write('HELLO WORLD', False, \"right\")"
    ]
   },
   {
