--- a/examples/introduction.ipynb
+++ b/examples/introduction.ipynb
@@ -15,12 +15,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2a876eb401a40af93f26a8ce90abcfd",
+       "model_id": "8cab1831a0d64419a473909c04c9e98b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "TurtleWidget(turtle_heading=90.0, turtle_heading_x=0.0, turtle_heading_y=1.0)"
+       "TurtleWidget(canvas_height=500, canvas_width=500, turtle_heading=90.0, turtle_heading_x=0.0, turtle_heading_y=…"
       ]
      },
      "metadata": {},
@@ -29,8 +29,18 @@
    ],
    "source": [
     "from ipyturtle2 import TurtleWidget\n",
-    "t = TurtleWidget()\n",
+    "t = TurtleWidget(500, 500)\n",
     "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t.reset()\n",
+    "t.circle(20, 360)"
    ]
   },
   {
@@ -39,12 +49,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t.circle(20)"
+    "t.reset()\n",
+    "t.left(93)\n",
+    "t.spiral_forward(150, 0, 0.1, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "90.0"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.reset()\n",
+    "t.spiral_circle(50, 5, 2, 180)\n",
+    "\n",
+    "t.turtle_heading"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,19 +127,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "t.left(45)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -123,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
