--- a/examples/dev.ipynb
+++ b/examples/dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,13 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9d9e94781eb418daf38b4528367a10a",
+       "model_id": "9f876d3dfddc4e989bb80f218baa49cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,16 +44,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "t.dot(10, 'red')"
+    "t.reset()\n",
+    "t.color('red', 'yellow')\n",
+    "# t.forward(10)\n",
+    "t.left(493)\n",
+    "t.begin_fill()\n",
+    "# t.circle(20, 180)\n",
+    "# t.circle(80)\n",
+    "# t.hideturtle()\n",
+    "t.spiral_forward(150, 2.1, 0.015, 6)\n",
+    "t.end_fill()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,16 +79,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "t.goto(50, 50)"
+    "t.forward(100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
