fix: isTurtleOn use command

--- a/examples/dev.ipynb
+++ b/examples/dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,13 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f876d3dfddc4e989bb80f218baa49cf",
+       "model_id": "2a95fa210ab549c7a5f0e48497d5af42",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,28 +44,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "t.reset()\n",
     "t.color('red', 'yellow')\n",
-    "# t.forward(10)\n",
-    "t.left(493)\n",
     "t.begin_fill()\n",
-    "# t.circle(20, 180)\n",
-    "# t.circle(80)\n",
-    "# t.hideturtle()\n",
+    "t.left(580)\n",
+    "t.circle(20, 180)\n",
+    "t.left(580)\n",
+    "t.hideturtle()\n",
     "t.spiral_forward(150, 2.1, 0.015, 6)\n",
+    "t.showturtle()\n",
     "t.end_fill()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
+    "t.reset()\n",
     "t.color('red', 'yellow')\n",
     "t.position()\n",
     "t.begin_fill()\n",
