feat: 动画可开关，画圆可以逆向

--- a/examples/dev.ipynb
+++ b/examples/dev.ipynb
@@ -2,29 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# t.reset()\n",
-    "# t.spiral_circle(15, 5, 5, 45)\n",
-    "\n",
-    "# t.forward(50)\n",
-    "# t._turtle_heading\n",
-    "# t.circle(20, 180)\n",
-    "# t.left(90)\n",
-    "# t.goto(20, 40)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a95fa210ab549c7a5f0e48497d5af42",
+       "model_id": "6c72ca1622154038919d4b70dbf50d22",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,7 +28,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t.reset()\n",
+    "t.color('red', 'yellow')\n",
+    "t.begin_fill()\n",
+    "# t.begin_animation()\n",
+    "t.e\n",
+    "t.left(45)\n",
+    "t.circle(60, -360)\n",
+    "# t.forward(100)\n",
+    "t.end_fill()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,11 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "t.reset()\n",
+    "t.begin_animating()\n",
     "t.color('red', 'yellow')\n",
     "t.position()\n",
     "t.begin_fill()\n",
@@ -89,13 +91,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "t.reset()\n",
     "t.forward(100)\n",
     "t.color('red', 'yellow')\n",
     "t.begin_fill()\n",
+    "t.end_animating()\n",
     "t.dot(10, 'red')\n",
     "t.spiral_circle(10, 5,5,90)\n",
     "t.end_fill()\n",
