fix: turtle init heading, circle with negative radious

--- a/examples/dev.ipynb
+++ b/examples/dev.ipynb
@@ -2,24 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c72ca1622154038919d4b70dbf50d22",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "TurtleWidget()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ipyturtle2 import TurtleWidget\n",
     "t = TurtleWidget(500, 500)\n",
@@ -28,47 +13,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "t.reset()\n",
-    "t.color('red', 'yellow')\n",
-    "t.begin_fill()\n",
-    "# t.begin_animation()\n",
-    "t.e\n",
-    "t.left(45)\n",
-    "t.circle(60, -360)\n",
+    "# t.color('red', 'yellow')\n",
+    "# t.begin_fill()\n",
+    "t.begin_animation()\n",
+    "t.circle(60, 90)\n",
+    "# t.circle(-60, 90)\n",
     "# t.forward(100)\n",
-    "t.end_fill()"
+    "# t.circle(60, -90)\n",
+    "t.circle(-60, -90)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "t.reset()\n",
     "t.color('red', 'yellow')\n",
     "t.begin_fill()\n",
-    "t.left(580)\n",
+    "t.begin_animation()\n",
+    "# t.left(580)\n",
     "t.circle(20, 180)\n",
     "t.left(580)\n",
-    "t.hideturtle()\n",
+    "# t.hideturtle()\n",
     "t.spiral_forward(150, 2.1, 0.015, 6)\n",
-    "t.showturtle()\n",
+    "# t.showturtle()\n",
     "t.end_fill()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "t.reset()\n",
-    "t.begin_animating()\n",
+    "t.begin_animation()\n",
     "t.color('red', 'yellow')\n",
     "t.position()\n",
     "t.begin_fill()\n",
@@ -82,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +85,7 @@
     "t.forward(100)\n",
     "t.color('red', 'yellow')\n",
     "t.begin_fill()\n",
-    "t.end_animating()\n",
+    "t.end_animation()\n",
     "t.dot(10, 'red')\n",
     "t.spiral_circle(10, 5,5,90)\n",
     "t.end_fill()\n",
@@ -108,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
